--- a/dags/spark-minio.yaml
+++ b/dags/spark-minio.yaml
@@ -7,7 +7,7 @@ spec:
   mode: cluster
   image: nickpeachey/sparkminiosaver:0.0.2
   imagePullPolicy: Always
-  mainClass: org.example.Main
+  mainClass: org.cawooka.MainExecutor
   mainApplicationFile: "local:///opt/spark/app/spark-minio-saver.jar"
   sparkVersion: "3.5.5"
   restartPolicy:
