--- a/dags/spark-minio.yaml
+++ b/dags/spark-minio.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: Scala
   mode: cluster
-  image: nickpeachey/sparkminiosaver:3.0.7
+  image: nickpeachey/sparkminiosaver:3.0.17
   imagePullPolicy: Always
   mainClass: "com.cawooka.MainExecutor"
   mainApplicationFile: "local:///opt/spark/jars/spark-debug-app.jar"
@@ -36,7 +36,7 @@ spec:
     "spark.hadoop.fs.s3a.impl": "org.apache.hadoop.fs.s3a.S3AFileSystem"
     spark.kubernetes.submission.waitAppCompletion: "false"
     spark.kubernetes.file.upload.path: "s3a://spark-temp-uploads"
-    spark.driver.extraClassPath: "/opt/spark/jars/spark-debug-app.jar:/opt/spark/jars/hadoop-aws-3.3.6.jar:/opt/spark/jars/aws-java-sdk-bundle-1.11.1026.jar:/opt/spark/jars/hadoop-common-3.3.6.jar"
-    spark.executor.extraClassPath: "/opt/spark/jars/spark-debug-app.jar:/opt/spark/jars/hadoop-aws-3.3.6.jar:/opt/spark/jars/aws-java-sdk-bundle-1.11.1026.jar:/opt/spark/jars/hadoop-common-3.3.6.jar"
-    # UPDATE JAR VERSIONS IN SPARK.JARS HERE (now 3.3.6):
-    spark.jars: "local:///opt/spark/jars/spark-debug-app.jar,local:///opt/spark/jars/hadoop-aws-3.3.6.jar,local:///opt/spark/jars/aws-java-sdk-bundle-1.11.1026.jar,local:///opt/spark/jars/hadoop-common-3.3.6.jar"
+    spark.driver.extraClassPath: "/opt/spark/jars/spark-debug-app.jar:/opt/spark/jars/hadoop-aws-3.3.6.jar:/opt/spark/jars/aws-java-sdk-bundle-1.11.1026.jar:/opt/spark/jars/hadoop-common-3.3.6.jar:/opt/spark/jars/hadoop-mapreduce-client-core-3.3.6.jar:/opt/spark/jars/hadoop-hdfs-client-3.3.6.jar:/opt/spark/jars/jackson-annotations-2.12.7.jar:/opt/spark/jars/jackson-core-2.12.7.jar:/opt/spark/jars/jackson-databind-2.12.7.jar:/opt/spark/jars/jackson-module-scala_2.12-2.12.7.jar"
+    spark.executor.extraClassPath: "/opt/spark/jars/spark-debug-app.jar:/opt/spark/jars/hadoop-aws-3.3.6.jar:/opt/spark/jars/aws-java-sdk-bundle-1.11.1026.jar:/opt/spark/jars/hadoop-common-3.3.6.jar:/opt/spark/jars/hadoop-mapreduce-client-core-3.3.6.jar:/opt/spark/jars/hadoop-hdfs-client-3.3.6.jar:/opt/spark/jars/jackson-annotations-2.12.7.jar:/opt/spark/jars/jackson-core-2.12.7.jar:/opt/spark/jars/jackson-databind-2.12.7.jar:/opt/spark/jars/jackson-module-scala_2.12-2.12.7.jar"
+      # All JARs that Spark needs to know about for distribution
+    spark.jars: "local:///opt/spark/jars/spark-debug-app.jar,local:///opt/spark/jars/hadoop-aws-3.3.6.jar,local:///opt/spark/jars/aws-java-sdk-bundle-1.11.1026.jar,local:///opt/spark/jars/hadoop-common-3.3.6.jar,local:///opt/spark/jars/hadoop-mapreduce-client-core-3.3.6.jar,local:///opt/spark/jars/hadoop-hdfs-client-3.3.6.jar,local:///opt/spark/jars/jackson-annotations-2.12.7.jar,local:///opt/spark/jars/jackson-core-2.12.7.jar,local:///opt/spark/jars/jackson-databind-2.12.7.jar,local:///opt/spark/jars/jackson-module-scala_2.12-2.12.7.jar"
