--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ apache-airflow
 apache-airflow-providers-cncf-kubernetes
 apache-airflow-providers-apache-spark
 kubernetes
-boto3
+apache-airflow-providers-amazon>=3.3.0
